HW5_full_fixed